# wow-arena-leaderboards

./: .gitignore  LICENSE  README.md  config_sample.js  data-to-fetch.txt  index.html  package.json  script.js
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  conf.py  data-to-fetch.txt  docker-compose.yml  example.Dockerfile  fetcher.Dockerfile  manage.py  pyproject.toml  rbg_data.json  requirements.txt  thres_data.json  twos_data.json
backend/api/: __init__.py
backend/api/apps/: __init__.py
backend/api/conf/: app.py  asgi.py  settings.py
backend/api/config/: asgi.py  settings.py
backend/api/middleware/: __init__.py  cors.py
backend/cli/: __init__.py  cli.py  commands.py  decorators.py
backend/data_formats/: char_media_api_format.json  profile_api_format.json  pvp_api_format.json  spec_media_api_format.json
backend/data_formats/classes_api/: all_classes_api_format.json  class_media_api_format.json
backend/data_formats/specs_api/: all_specs_api_format.json
backend/database/: __init__.py  connection_layer.py
backend/json_data/: pvp_data.json  wow_classes.json  wow_specs.json
backend/modeling/: db.md
backend/requirements/: base.txt  dev.txt
backend/service/: __init__.py  exceptions.py
backend/service/fetcher/: fetch_api_token.py  fetch_pvp_data.py  fetch_wow_classes.py  fetch_wow_specs.py  save_into_db.py  utils.py
backend/service/schemas/: __init__.py  base_schema.py  wow_classes_schema.py  (+1 more)
backend/shared/: models.py  routers.py
backend/src/: asgi.py  connection_layer.py  main.py  manage.py  populator.py  settings.py  utils.py
(+221 files in other folders)
