[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Firmino Neto <firminoneto11@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
orm = "latest"
aiosqlite = "latest"
fastapi = "latest"
python-decouple = "latest"
httpx = "latest"
uvicorn = "latest"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipython = "^8.5.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
